# testing-tauri-ci-cd

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
.github/workflows/: build-macos.yml  macOS.yml
apps/app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/app/src/: App.tsx  main.tsx
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/src/: main.rs
apps/app/src/components/: main-page-pc.tsx
apps/app/src/components/landing/: folder-list-item.tsx  landing-card.tsx  open-folder.tsx  recents.tsx  vaults.tsx
apps/app/src/components/sidebar/: app-sidebar-group-recents.tsx  app-sidebar-group-vaults.tsx  app-sidebar-shortcut.tsx  app-sidebar-trigger.tsx  app-sidebar.tsx  open-folder-dialog.tsx  recent-dropdown.tsx  search-form.tsx  vault-dropdown.tsx  view-switcher.tsx
apps/app/src/components/ui/: form.tsx  titlebar.tsx
apps/app/src/components/vault-manager/: create-vault-form.tsx  edit-vault-form.tsx  manage-vaults-dialog.tsx  schemas.ts
apps/app/src/hooks/: use-upload-notes-from-dirs.ts  use-vaults.ts
apps/app/src/lib/: backend-types.ts  file.ts  utils.ts
apps/app/src/lib/services/: directory-service.ts  file-service.ts  vault-service.ts
apps/app/src/stores/: open-folder-settings-store.ts  recents-store.ts
apps/www/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/www/src/: App.tsx  main.tsx
