[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jakub Wojcik"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.3", features = [ "shell-open", "path-all", "fs-exists", "fs-read-file", "fs-read-dir", "fs-create-dir", "dialog-all", "fs-write-file", "window-close", "window-minimize", "window-unmaximize", "window-unminimize", "window-show", "window-maximize", "window-hide", "window-start-dragging", "devtools"] }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
directories = "5.0"
lazy_static = "1.4.0"
nanoid = "0.4.0"
notify = "6.1.1"
typeshare = "1.0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
